fix(theme): adiciona limite de altura para preview do tema
Signed-off-by: Valdeir S <contact@valdeir.dev>

--- a/upload/admin/view/template/extension/payment/pagseguro.twig
+++ b/upload/admin/view/template/extension/payment/pagseguro.twig
@@ -943,7 +943,7 @@ function changeThemeInfo(paymentType, filename) {
 #theme-details .theme-thumbnail {
   display: flex;
   gap: 20px;
-  justify-content: start;
+  justify-content: center;
   flex-wrap: wrap;
 }
 #theme-details .theme-thumbnail button {
@@ -974,6 +974,13 @@ function changeThemeInfo(paymentType, filename) {
 }
 .swal2-popup.swal2-modal.swal2-show {
   width: 800px !important;
+}
+.swal2-popup.swal2-modal.swal2-show {
+  width: 800px !important;
+}
+.swal2-image {
+  max-height: 80vh;
+  object-fit: contain;
 }
 .tab-content > .active {
   display: block !important;
