--- a/upload/catalog/view/theme/default/template/extension/payment/pagseguro_boleto.twig
+++ b/upload/catalog/view/theme/default/template/extension/payment/pagseguro_boleto.twig
@@ -1,3 +1,48 @@
+<span style="display: none; visibility: hidden">
+---
+title: Tema padrão (Boleto)
+version: 1.0.0
+thumbnails:
+  - view/image/pagseguro/themes/boleto_default/01.png
+  - view/image/pagseguro/themes/boleto_default/02.png
+  - view/image/pagseguro/themes/boleto_default/03.png
+description: |
+    Tema para navegadores moderno.
+    Utiliza as melhores features web para realizar toda integração
+compatibility:
+    edge:
+      name: Microsoft Edge
+      version: 14
+    firefox:
+      name: Firefox
+      version: 44
+    chrome:
+      name: Chrome
+      version: 49
+    safari:
+      name: Safari
+      version: 13
+    safari_ios:
+      name: Safari (iOs)
+      version: 36
+    android_webview:
+      name: Android (WebView)
+      version: 81
+    chrome_android:
+      name: Chrome (Android)
+      version: 85
+    firefox_android:
+      name: Firefox (Android)
+      version: 79
+    samsung_android:
+      name: Samsung (Android)
+      version: 11
+    opera:
+      name: Opera
+      version: 36
+---
+</span>
+
 <style>
   .hidden {
     display: none;
