--- a/upload/catalog/view/theme/default/template/extension/payment/pagseguro_credit.twig
+++ b/upload/catalog/view/theme/default/template/extension/payment/pagseguro_credit.twig
@@ -1,11 +1,11 @@
 <span style="display: none; visibility: hidden">
 ---
-title: Tema padrão
+title: Tema padrão (Cartão de Crédito)
 version: 1.0.0
 thumbnails:
-  - view/image/pagseguro/themes/default/01.png
-  - view/image/pagseguro/themes/default/02.png
-  - view/image/pagseguro/themes/default/03.png
+  - view/image/pagseguro/themes/credit_default/01.png
+  - view/image/pagseguro/themes/credit_default/02.png
+  - view/image/pagseguro/themes/credit_default/03.png
 description: |
     Tema para navegadores moderno.
     Utiliza as melhores features web para realizar toda integração
