style: altera identaçao
Signed-off-by: Valdeir S <contact@valdeir.dev>

--- a/upload/catalog/view/theme/default/template/extension/payment/pagseguro_boleto.twig
+++ b/upload/catalog/view/theme/default/template/extension/payment/pagseguro_boleto.twig
@@ -217,7 +217,9 @@ compatibility:
       document.querySelector('#cpf').closest('.form-group').classList.toggle('hidden')
       document.querySelector('#button-confirm').classList.toggle('hidden')
       document.querySelector('#button-print').classList.toggle('hidden')
-      if (allowDownload) document.querySelector('#button-download').classList.toggle('hidden')
+      if (allowDownload) {
+        document.querySelector('#button-download').classList.toggle('hidden')
+      }
     }
 
     /**
