feat: altera metodo responsavel por abrir o boleto
Signed-off-by: Valdeir S <contact@valdeir.dev>

--- a/upload/catalog/view/theme/default/template/extension/payment/pagseguro_boleto.twig
+++ b/upload/catalog/view/theme/default/template/extension/payment/pagseguro_boleto.twig
@@ -185,7 +185,13 @@ compatibility:
 
       fetch(`{{ confirm }}${paymentCode}`.replace(/&amp;/, '&'))
         .then(() => {
-          location.href = `{{ action_print_boleto }}${encodeURI(paymentLink)}`.replace(/&amp;/, '&')
+          const url = `{{ action_print_boleto }}${encodeURI(paymentLink)}`.replace(/&amp;/, '&')
+          const anchor = document.createElement('a')
+          anchor.target = '_blank'
+          anchor.href = url
+          anchor.click()
+          anchor.remove()
+          location.href = url
         })
     }
 
