feat: ao visualizar o boleto, acessa a rota `checkout/success`
O acesso aa rota eh necessario para limpar os dados do carrinho

Signed-off-by: Valdeir S <contact@valdeir.dev>

--- a/upload/catalog/view/theme/default/template/extension/payment/pagseguro_boleto.twig
+++ b/upload/catalog/view/theme/default/template/extension/payment/pagseguro_boleto.twig
@@ -184,14 +184,9 @@ compatibility:
       $(ev.target).button('loading')
 
       fetch(`{{ confirm }}${paymentCode}`.replace(/&amp;/, '&'))
+        .then((res) => fetch(res.url))
         .then(() => {
-          const url = `{{ action_print_boleto }}${encodeURI(paymentLink)}`.replace(/&amp;/, '&')
-          const anchor = document.createElement('a')
-          anchor.target = '_blank'
-          anchor.href = url
-          anchor.click()
-          anchor.remove()
-          location.href = url
+          location.href = `{{ action_print_boleto }}${encodeURI(paymentLink)}`.replace(/&amp;/, '&')
         })
     }
 
