--- a/upload/catalog/view/theme/default/template/extension/payment/pagseguro_credit.twig
+++ b/upload/catalog/view/theme/default/template/extension/payment/pagseguro_credit.twig
@@ -145,7 +145,7 @@ label[for="card-number"] + div {
           <div class="form-group col-sm-12">
             <label class="col-sm-3 control-label" for="birthdate">{{ entry_holder_birthdate }}</label>
             <div class="col-sm-8">
-              <input class="form-control" type="date" id="birthdate" name="birthdate" placeholder="Ex: 07/03/1808" value="{{ data_nascimento }}" />
+              <input class="form-control" type="date" id="birthdate" name="birthdate" placeholder="Ex: 07/03/1808" value="{{ birthday }}" />
             </div>
           </div>
 
