feat: adiciona mensagem de erro ao tentar criar pasta de log
Agora, caso o sistema não tenha permissão de criar a pasta de log,
será exibida uma mensagem para o cliente na tela de configuração da
extensão.

fix #37

Signed-off-by: Valdeir S <valdeir.naval@gmail.com>

--- a/upload/admin/view/template/extension/payment/pagseguro.twig
+++ b/upload/admin/view/template/extension/payment/pagseguro.twig
@@ -34,6 +34,10 @@
   </div>
 
   <div class="container-fluid">
+    {% if warning %}
+    <div class="alert alert-danger">{{ warning }}</div>
+    {% endif %}
+
     <div class="panel panel-default">
       <div class="panel-heading">
         <h3 class="panel-title">
