fix: corrige bug com parcelamento sem juros
fix #57

Signed-off-by: Valdeir S <valdeir.naval@gmail.com>

--- a/upload/catalog/view/theme/default/template/extension/payment/pagseguro_credit.twig
+++ b/upload/catalog/view/theme/default/template/extension/payment/pagseguro_credit.twig
@@ -251,7 +251,7 @@ label[for="card-number"] + div {
 
     PagSeguroDirectPayment.getInstallments({
       amount: parseFloat('{{ amount }}'),
-      {% if maxInstallmentNoInterest %}
+      {% if maxInstallmentNoInterest > 1 %}
       maxInstallmentNoInterest: parseInt('{{ maxInstallmentNoInterest }}'),
       {% endif %}
       success: (response) => {
